--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "factcheck",
   "module": "index.ts",
-  "type": "module",
-  "private": true,
   "devDependencies": {
     "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
+  "private": true,
+  "type": "module",
   "dependencies": {
-    "@types/express": "^5.0.3",
-    "express": "^5.1.0"
+    "hono": "^4.9.6",
+    "nanoid": "^5.1.5"
   }
 }
